--- a/src/app/view/ventas/generar-venta/generar-venta.component.scss
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.scss
@@ -4050,7 +4050,7 @@ input:checked+.slider:before {
         padding: 1rem;
         border-radius: 4px;
         border: 1px solid #dee2e6;
-        font-size: 1.1rem;
+        font-size: 1.3rem !important;
 
         .row {
             margin-bottom: 0.5rem;
