--- a/src/app/view/ventas/generar-venta/generar-venta.component.scss
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.scss
@@ -257,7 +257,9 @@
     position: relative;
     display: inline-block;
     width: 50px;
-    height: 26px;
+    height: 25px;
+    left: 10px;
+    top: 3px;
 }
 
 .modern-switch input {
@@ -1465,6 +1467,7 @@
     border-radius: 0.5rem 0.5rem 0 0;
     position: relative;
     overflow: hidden;
+    padding-bottom: 50px;
 
     &::before {
         content: "";
